@@ -1,5 +1,5 @@
 <!-- ###FULLDOC### begin -->
-<div class="typo3-fullDoc">
+<div class="typo3-fullDoc typo3-templavoila-pagemodule">
 	<!-- Page header with buttons, path details and csh -->
 	<div id="typo3-docheader">
 		<div id="typo3-docheader-row1">
@@ -14,7 +14,7 @@
 
 <!-- Sidebar Disabled -->
 <!-- ###SIDEBAR_DISABLED### -->
-	<div id="typo3-docbody" style="top:22px">
+	<div id="typo3-docbody">
 		<div id="typo3-inner-docbody">
 			###CONTENT###
 		</div>
@@ -23,9 +23,9 @@
 
 <!-- Sidebar TopTabs and TopRows -->
 <!-- ###SIDEBAR_TOP### -->
-	<div id="typo3-docbody" style="top:22px">
-		<div id="typo3-docheader-row2" style="height:auto;padding-top:1px">
-			<div class="docheader-row2-inner" style="margin-left:10px;margin-right:10px;width:auto">###TABROW###</div>
+	<div id="typo3-docbody">
+		<div id="typo3-docheader-row2">
+			<div class="docheader-row2-inner">###TABROW###</div>
 		</div>
 		<div id="typo3-inner-docbody">
 			###CONTENT###
@@ -35,7 +35,7 @@
 
 <!-- Sidebar Left -->
 <!-- ###SIDEBAR_LEFT### -->
-	<div id="typo3-docbody" style="top:22px">
+	<div id="typo3-docbody">
 		<div id="typo3-inner-docbody">
 			<table cellspacing="0" cellpadding="0" style="width:100%; height:550px; padding:0; margin:0;">
 				<tr>
