@@ -1,3 +1,7 @@
+2010-08-09  Tolleiv Nietsch <nietsch@aoemedia.de>
+
+	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - usability adjustments
+
 2010-08-06  Tolleiv Nietsch <nietsch@aoemedia.de>
 
 	* Follow-up to: #14386: Static DS - Centralize access to datastructure / pt.1  - FE crash case removed
